tests/negative/neg_rule1_param_fail.safe
-- Test: neg_rule1_param_fail
-- Description: Parameter passing where the actual does not fit the formal type.
--   A value of a wider type is passed to a parameter of a narrower type
--   without any range guard.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p130:2289e5b2
-- Expected: REJECT narrowing_check_failure

package param_fail

   type percentage is range 0 to 100;
   type wide_int is range -10_000 to 10_000;

   function use_percent (p : percentage)
      return;

   --  Pass_Unchecked: passes a Wide_Int to a Percentage parameter
   --  without verifying the value is in 0..100.
   function pass_unchecked (v : wide_int)

      use_percent (percentage (v));  -- ERROR: V may not be in 0..100

